1. Cleaned up messages in C code. 2. Added instructions for demo in Jupyter notebook

--- a/plugin/tigergraph/jupyter-demo/TG_demo.ipynb
+++ b/plugin/tigergraph/jupyter-demo/TG_demo.ipynb
@@ -1,19 +1,23 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Welcome to Parallel Compute Hackathon\n",
-    "# =====================================\n",
-    "# This notebook uses TigerGraph python interface to\n",
-    "# calculate similarity using Xilinx FPGA in these steps:\n",
-    "# 1. Load graph\n",
-    "# 2. Create Embeddings\n",
-    "# 3. Send embeddings to FPGA\n",
-    "# 4. Compute Cosine Similarity"
+    "=================================================================   \n",
+    "This notebook uses TigerGraph python interface to calculate similarity using Xilinx Alveo card in these steps:\n",
+    "1. Load graph\n",
+    "1. Create Embeddings\n",
+    "1. Send embeddings to FPGA\n",
+    "1. Compute Cosine Similarity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# import modules"
    ]
   },
   {
@@ -22,7 +26,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import modules\n",
     "import sys\n",
     "import os\n",
     "from pathlib import Path\n",
@@ -35,15 +38,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Login Setup"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# login Setup\n",
-    "hostName = \"xsjfislx14\"                             # TG server hostname\n",
-    "userName = \"sachink\"                                # TG user name\n",
-    "passWord = \"Xilinx123\"                              # TG user password\n",
+    "hostName = \"hostname\"                               # TG server hostname\n",
+    "userName = \"username\"                               # TG user name\n",
+    "passWord = \"password\"                               # TG user password\n",
     "\n",
     "# Query variables\n",
     "populationSize = 1000                               # Size of the total patient population data\n",
@@ -51,10 +61,17 @@
     "numDevices = 1                                      # Number of FPGA devices to distribute the queries to\n",
     "\n",
     "# Path Setup\n",
-    "queryLocation = Path(\"C:/Users/sachink/ghe/graphanalytics/plugin/tigergraph/tests/cosine_nbor_ss_dense_int\")\n",
+    "queryLocation = Path(\"/graphanalytics/plugin/tigergraph/tests/cosine_nbor_ss_dense_int\")\n",
     "hostDataLocation = f\"/proj/gdba/datasets/synthea/{populationSize}_patients/csv\"        # Location of synthea generated data\n",
     "\n",
     "graphName = f'xgraph_{userName}_{populationSize}'   # TG graph name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Utility Methods"
    ]
   },
   {
@@ -78,6 +95,13 @@
     "    for m in matches:\n",
     "        matchingPatient = getPatient(m['Id'])\n",
     "        print(f'{m[\"score\"]} {getPatientName(matchingPatient)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load Graph (only one time required)"
    ]
   },
   {
@@ -314,6 +338,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create Embeddings"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -338,6 +369,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Send embeddings to FPGA"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -353,7 +391,7 @@
     }
    ],
    "source": [
-    "# 3. Send embeddings to FPGA\n",
+    "# Send embeddings to FPGA\n",
     "# ==========================\n",
     "\n",
     "print('Hw data load...')\n",
@@ -363,27 +401,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Compute Cosine Similarity"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running Query...\n",
-      "Matches for patient Emory494 Ruecker817\n",
-      "1 Emory494 Ruecker817\n",
-      "0.92693 Oliver401 Hettinger594\n",
-      "0.92667 Jarrett354 Kuhlman484\n",
-      "0.90119 Noel608 Hegmann834\n",
-      "0.89546 Richard937 Lowe577\n",
-      "0.89246 Tamar361 Cremin516\n",
-      "0.89013 Merlin721 Franecki195\n",
-      "0.887 Abdul218 Abshire638\n",
-      "0.88639 Adalberto916 Gaylord332\n",
-      "0.88515 Arlen68 Robel940\n",
-      "completed in 7.08 msec\n"
+      "Running Query...\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'conn' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-6b64e421adf9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Running Query...'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mtargetPatients\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetVertices\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'patients'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlimit\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mtargetPatient\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtargetPatients\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrand\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m result = conn.runInstalledQuery('client_cosinesim_match_alveo',\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'conn' is not defined"
      ]
     }
    ],
@@ -400,6 +444,13 @@
     "resTime = result[0][\"ExecTimeInMs\"]\n",
     "print(f'completed in {resTime:.2f} msec')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -418,7 +469,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.13"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
