Removed pyvenv from make clean target and other clean up

--- a/cosinesim/examples/python/jupyter/CosineSim_demo.ipynb
+++ b/cosinesim/examples/python/jupyter/CosineSim_demo.ipynb
@@ -25,17 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.6.13\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from platform import python_version\n",
     "print(python_version())"
@@ -52,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,14 +64,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "VectorLength = 200\n",
     "NumVectors = 5000\n",
-    "MaxValue = 16383\n",
-    "testVec = []"
+    "MaxValue = 16383"
    ]
   },
   {
@@ -96,13 +87,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "opt = xcs.options()\n",
-    "opt.vecLength = VectorLength\n",
-    "testVecIdx = rand.randint(0, NumVectors - 1) # select one index as the test vector"
+    "opt.vecLength = VectorLength"
    ]
   },
   {
@@ -114,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,13 +116,12 @@
    "metadata": {},
    "source": [
     "### Create and load Population <a id=\"load\"></a>\n",
-    "---\n",
-    "We start by {FILL ME}"
+    "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,14 +134,14 @@
    "source": [
     "Next we create random data and load it one vector at a time. Any numerical embeddings can be used to create this data, rendering the acceleration library useful in a wide variety of use cases.\n",
     "\n",
-    "`getPopulationVectorBuffer` API is called to return a buffer element that can be filled. This is followed by a `finishCurrentPopulationVector` call that {FILL ME}. When all the vectors are created, `finishLoadPopulationVectors` is called to finish loading the population data into FPGA accessible HBM memory. \n",
+    "`getPopulationVectorBuffer` API is called to return a buffer element that can be filled. This is followed by a `finishCurrentPopulationVector` call. When all the vectors are created, `finishLoadPopulationVectors` is called to finish loading the population data into FPGA accessible HBM memory. \n",
     "\n",
     "This finishes the **one-time** population creation process."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,8 +154,6 @@
     "    for vecIdx in range(VectorLength):\n",
     "        val = rand.randint(int(-MaxValue/2), int(MaxValue/2))\n",
     "        vecBuf.fill(val)  # fill cpp managed memory\n",
-    "        if vecNum == testVecIdx:\n",
-    "            testVec.append(val)\n",
     "\n",
     "    # Finish filling the vector\n",
     "    cs.finishCurrentPopulationVector(vecBuf)\n",
@@ -187,37 +174,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Results:\n",
-      "Similarity   Vector #\n",
-      "----------   --------\n",
-      "1.000000       2833\n",
-      "0.279117       1149\n",
-      "0.257780       3174\n",
-      "0.248899       3345\n",
-      "0.232691       681\n",
-      "0.228679       3363\n",
-      "0.221258       2267\n",
-      "0.218737       1018\n",
-      "0.218032       3618\n",
-      "0.210160       2100\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "result = cs.matchTargetVector(10, testVec)\n",
+    "# Create Target vector\n",
+    "targetVec = []\n",
+    "for vecIdx in range(VectorLength):\n",
+    "    targetVec.append(rand.randint(int(-MaxValue/2), int(MaxValue/2)))\n",
+    "\n",
+    "result = cs.matchTargetVector(10, targetVec)\n",
     "print(\"Results:\")\n",
     "print(\"Similarity   Vector #\")\n",
     "print(\"----------   --------\")\n",
     "for item in result:\n",
     "    print('{:.6f}'.format(item.similarity) + \"       \" + str(item.index))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
