Updated Jupyter Notebook for new pyTigerGraph version and added python script version

--- a/plugin/tigergraph/jupyter-demo/TG_demo.ipynb
+++ b/plugin/tigergraph/jupyter-demo/TG_demo.ipynb
@@ -9,27 +9,11 @@
     "This notebook uses [pyTigerGraph](https://pytigergraph.github.io/pyTigerGraph/), a TigerGraph python interface to calculate similarity using Xilinx FPGAs. The python package uses a Java client to run gsql queries on a remote server running TigerGraph via Rest APIs.\n",
     "\n",
     "#### The demo\n",
-    "For the purpose of this demo, we will use medical data synthetically generated using an open-source tool called [Synthea](https://synthetichealth.github.io/synthea/) to find patients that are the most \"similar\" to a particular patient based on a list of attributes. The similarity score used is Cosine Similarity. For more information, refer to [Xilinx Alveo Graph Analytics](https://pages.gitenterprise.xilinx.com/FaaSApps/graphanalytics/index.html) doc. The demo is structured in two sections.\n",
+    "For the purpose of this demo, we will use medical data synthetically generated using an open-source tool called [Synthea](https://synthetichealth.github.io/synthea/) to find patients that are the most \"similar\" to a particular patient based on a list of attributes. The similarity score used is Cosine Similarity. For more information, refer to [Xilinx Alveo Graph Analytics](https://pages.gitenterprise.xilinx.com/FaaSApps/graphanalytics/index.html) doc. The demo is structured in two sections. Before proceeding, we configure the demo with the following setup steps.\n",
     " \n",
     "> **NOTE 1**: The synthea data is for demonstration purpose only and the user can use their own data and write queries to create their own embeddings.\n",
     "\n",
-    "> **NOTE 2**: The TigerGraph plugin currently used to run queries on FPGA supports only one graph. Therefore, more than one concurrent users running this demo on the same TG server is not supported. This will be supported in a future version.\n",
-    "\n",
-    "#### Prepare TG database\n",
-    "Shows **one-time** preparation of the database. Once done, queries can be repeateadly run as shown in the next Section.\n",
-    "1. [**Load Graph**](#loadg)\n",
-    " - [Create new graph](#newg)\n",
-    " - [Create graph schema](#schema)\n",
-    " - [Load graph data](#loadd)\n",
-    " - [Install queries](#install)\n",
-    "2. [**Create Embeddings**](#embed)\n",
-    "3. [**Send Embeddings to FPGA**](#send)\n",
-    "\n",
-    "#### Run Queries on FPGA\n",
-    "Shows **repeatable** use of query to run *accelerated* similarity computation on FPGA\n",
-    "1. [**Compute Cosine Similarity**](#run)\n",
-    "\n",
-    "The cells below show how to perform these steps in detail. Before proceeding, we configure the demo with the following setup steps."
+    "> **NOTE 2**: The TigerGraph plugin currently used to run queries on FPGA supports only one graph. Therefore, more than one concurrent users running this demo on the same TG server is not supported. This will be supported in a future version."
    ]
   },
   {
@@ -47,11 +31,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "import os\n",
     "import time\n",
     "import random as rand\n",
-    "from pathlib import Path\n",
+    "from pathlib import Path, PurePosixPath\n",
     "import pyTigerGraph as tg"
    ]
   },
@@ -113,8 +95,8 @@
    "outputs": [],
    "source": [
     "localRepoLocation = Path(\"C:/Users/dummy\")\n",
-    "queryLocation = Path(\"graphanalytics/plugin/tigergraph/tests/cosine_nbor_ss_dense_int\") # DO NOT CHANGE!\n",
-    "queryFileLocation = localRepoLocation / queryLocation"
+    "exampleLocation = Path(\"graphanalytics/plugin/tigergraph/examples/synthea\") # DO NOT CHANGE!\n",
+    "queryFileLocation = localRepoLocation / exampleLocation / \"query\""
    ]
   },
   {
@@ -130,7 +112,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "serverDataLocation = f\"/path/to/data/{populationSize}_patients\""
+    "serverRepoLocation = PurePosixPath(\"/home/dummy\")\n",
+    "serverDataLocation = serverRepoLocation / PurePosixPath(exampleLocation) / \"1000_patients/csv\""
    ]
   },
   {
@@ -165,34 +148,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Load Graph <a id=\"loadg\"></a>\n",
-    "---"
+    "---\n",
+    "#### Prepare TG database\n",
+    "Shows **one-time** preparation of the database. Once done, queries can be repeateadly run as shown in the next Section.\n",
+    "1. [**Load Graph**](#loadg)\n",
+    " - [Create new graph](#newg)\n",
+    " - [Create graph schema](#schema)\n",
+    " - [Load graph data](#loadd)\n",
+    " - [Install queries](#install)\n",
+    "\n",
+    "\n",
+    "2. [**Create Embeddings**](#embed)\n",
+    "3. [**Send Embeddings to FPGA**](#send)\n",
+    "\n",
+    "#### Run Queries on FPGA\n",
+    "Shows **repeatable** use of query to run *accelerated* similarity computation on FPGA\n",
+    "1. [**Compute Cosine Similarity**](#run)\n",
+    "\n",
+    "The cells below show how to perform these steps in detail."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 1. Load Graph <a id=\"loadg\"></a>\n",
+    "---\n",
     "#### 1.1 Create new graph <a id=\"newg\"></a>\n",
-    "- Connect to TigerGraph server by ommiting graph name (**NOTE**: gsql version should be specified for this step). This is needed to establish a valid REST endpoint that will be used to create a new desired graph\n",
+    "- Connect to TigerGraph server by ommiting graph name. This is needed to establish a valid REST endpoint that will be used to create a new desired graph\n",
     "- Create new graph by using gsql command and create a new connection with the new graph"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# connect to TG server and create graph\n",
     "graphName = f'xgraph_{userName}_{populationSize}'   # TG graph name\n",
-    "conn = tg.TigerGraphConnection(host='http://' + hostName, graphname='', username=userName, password=passWord, gsqlVersion='3.1.0')\n",
+    "conn = tg.TigerGraphConnection(host='http://' + hostName, graphname='', username=userName, password=passWord, useCert=False)\n",
     "print(\"\\n--------- Creating New graph ----------\")\n",
     "print(conn.gsql(f'create graph {graphName}()', options=[]))\n",
     "\n",
     "# connect to TG server with new graph\n",
     "print(f'Using graph {graphName}')\n",
-    "conn = tg.TigerGraphConnection(host='http://' + hostName, graphname=graphName, username=userName, password=passWord, gsqlVersion='3.1.0')"
+    "conn = tg.TigerGraphConnection(host='http://' + hostName, graphname=graphName, username=userName, password=passWord, useCert=False)"
    ]
   },
   {
@@ -243,12 +246,12 @@
    "source": [
     "print(\"\\n--------- Loading data into graph ----------\")\n",
     "loadFile = queryFileLocation / \"load_xgraph.gsql\"\n",
+    "print(str(serverDataLocation))\n",
     "\n",
     "with open(loadFile) as fh:\n",
     "    qStrRaw = fh.read()\n",
-    "    qStrRaw = qStrRaw.replace('\"', '\"\"')\n",
     "    qStrRaw = qStrRaw.replace('@graph', graphName)\n",
-    "    qStr    = qStrRaw.replace('$sys.data_root', serverDataLocation)\n",
+    "    qStr    = qStrRaw.replace('$sys.data_root', str(serverDataLocation))\n",
     "    print(conn.gsql(qStr, options=[]))\n",
     "    print(conn.gsql(f\"RUN LOADING JOB load_xgraph\", options=['-g', graphName]))\n",
     "    print(conn.gsql(f\"DROP JOB load_xgraph\", options=['-g', graphName]))"
@@ -277,13 +280,11 @@
     "with open(baseQFile) as bfh, open(clientQFile) as cfh:\n",
     "    print(\"installing base queries ...\")\n",
     "    qStrRaw = bfh.read()\n",
-    "    qStrRaw = qStrRaw.replace('\"', '\"\"')\n",
     "    qStr = qStrRaw.replace('@graph', graphName)\n",
     "    print(conn.gsql(qStr, options=[]))\n",
     "    \n",
     "    print(\"\\ninstalling client queries ...\")\n",
     "    qStrRaw = cfh.read()\n",
-    "    qStrRaw = qStrRaw.replace('\"', '\"\"')\n",
     "    qStr = qStrRaw.replace('@graph', graphName)\n",
     "    print(conn.gsql(qStr, options=[]))"
    ]
@@ -296,7 +297,7 @@
     "\n",
     "### 2. Create Embeddings <a id=\"embed\"></a>\n",
     "---\n",
-    "As seen earlier in the schema, each patient has a set of attributes which are represented as vertices. Additionaly, each patient is also represented as a vertex. The atributes of a patient are embedded into a vector representation called embeddings which are then stored as part of the patient vertex. Refer to [Cosine similarity](https://pages.gitenterprise.xilinx.com/FaaSApps/graphanalytics/overview.html#cosine-similarity) section for details on how the attributes are mapped to the patient embedding vector."
+    "As seen earlier in the schema, each patient has a set of attributes which are represented as vertices. Additionaly, each patient is also represented as a vertex. The attributes of a patient are embedded into a vector representation called embeddings which are then stored as part of the patient vertex. Refer to [Cosine similarity](https://pages.gitenterprise.xilinx.com/FaaSApps/graphanalytics/overview.html#cosine-similarity) section for details on how the attributes are mapped to the patient embedding vector."
    ]
   },
   {
@@ -307,7 +308,8 @@
    "source": [
     "print('Creating patient embeddings and storing them in patient vertices...')\n",
     "tStart = time.perf_counter()\n",
-    "resultSwCache = conn.runInstalledQuery('client_cosinesim_load_cache', timeout=240000000)\n",
+    "conn.runInstalledQuery('client_cosinesim_embed_vectors', timeout=240000000)\n",
+    "conn.runInstalledQuery('client_cosinesim_embed_normals', timeout=240000000)\n",
     "print(f'completed in {time.perf_counter() - tStart:.4f} sec')"
    ]
   },
@@ -322,24 +324,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading data into FPGA memory...\n",
-      "completed in 0.1553 sec\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Loading data into FPGA memory...')\n",
+    "# set number of FPGAs to use\n",
+    "conn.runInstalledQuery('client_cosinesim_set_num_devices', {'numDevices': numDevices}, timeout=240000000)\n",
+    "\n",
+    "# distribute data to FPGA memory\n",
     "tStart = time.perf_counter()\n",
-    "resultHwLoad = conn.runInstalledQuery('client_cosinesim_load_alveo', {'numDevices': numDevices}, timeout=240000000)\n",
-    "print(f'completed in {time.perf_counter() - tStart:.4f} sec\\n')"
+    "resultHwLoad = conn.runInstalledQuery('client_cosinesim_load_alveo', timeout=240000000)\n",
+    "print(f'completed in {time.perf_counter() - tStart:.4f} sec\\n')\n",
+    "\n",
+    "# Check status\n",
+    "status = conn.runInstalledQuery('client_cosinesim_get_alveo_status', timeout=240000000)\n",
+    "isInit = status[0][\"IsInitialized\"]\n",
+    "numDev = status[0][\"NumDevices\"]\n",
+    "print(f'FPGA Init: {isInit}, Dev: {numDev}\\n')"
    ]
   },
   {
@@ -365,11 +367,15 @@
     "targetPatient = targetPatients[rand.randint(1,100)]\n",
     "\n",
     "# run similarity on the choosen patient\n",
+    "tStart = time.perf_counter()\n",
     "result = conn.runInstalledQuery('client_cosinesim_match_alveo',\n",
-    "                                  {'newPatient': targetPatient['v_id'], 'topK': topK, 'numDevices': numDevices}, timeout=240000000)\n",
+    "                                  {'newPatient': targetPatient['v_id'], 'topK': topK}, timeout=240000000)\n",
+    "tDuration = 1000*(time.perf_counter() - tStart)\n",
+    "\n",
     "printResults(result, targetPatient)\n",
     "resTime = result[0][\"ExecTimeInMs\"]\n",
-    "print(f'completed in {resTime:.2f} msec')"
+    "print(f\"\\nRound Trip time: {tDuration:.2f} msec\")\n",
+    "print(f\"     Query time: {resTime:.2f} msec\")"
    ]
   },
   {
@@ -377,7 +383,6 @@
    "metadata": {},
    "source": [
     "Notice that as a sanity check, the top matching patient is the query patient itself with a match score of 1.\n",
-    "\n",
     "Feel free to play with the query!\n",
     "\n",
     "#### Thanks for your time!"
