Updated python bindings and example for function name change

--- a/cosinesim/examples/python/jupyter/jupyter_demo.ipynb
+++ b/cosinesim/examples/python/jupyter/jupyter_demo.ipynb
@@ -161,7 +161,7 @@
     "    cs.finishCurrentPopulationVector(vecBuf)\n",
     "\n",
     "# Finishing embedding creation\n",
-    "cs.finishLoadPopulationVectors()"
+    "cs.finishLoadPopulation()"
    ]
   },
   {
