Updated a comment for hardcoded path in python demos

--- a/plugin/tigergraph/examples/synthea/jupyter-demo/TG_demo.ipynb
+++ b/plugin/tigergraph/examples/synthea/jupyter-demo/TG_demo.ipynb
@@ -95,7 +95,7 @@
    "outputs": [],
    "source": [
     "localRepoLocation = Path(\"C:/Users/dummy\")\n",
-    "exampleLocation = Path(\"graphanalytics/plugin/tigergraph/examples/synthea\") # DO NOT CHANGE!\n",
+    "exampleLocation = Path(\"graphanalytics/plugin/tigergraph/examples/synthea\") # when running from github repo\n",
     "queryFileLocation = localRepoLocation / exampleLocation / \"query\""
    ]
   },
