Performance optimization for standalone Python API, script and Notebook

--- a/cosinesim/examples/python/jupyter/jupyter_demo.ipynb
+++ b/cosinesim/examples/python/jupyter/jupyter_demo.ipynb
@@ -153,9 +153,8 @@
     "    vecBuf = cs.getPopulationVectorBuffer(vecNum)\n",
     "\n",
     "    # Fill the vector\n",
-    "    for vecIdx in range(VectorLength):\n",
-    "        val = rand.randint(int(-MaxValue/2), int(MaxValue/2))\n",
-    "        vecBuf.fill(val)  # fill cpp managed memory\n",
+    "    valVec = xcs.buildRandData(int(MaxValue/2), int(-MaxValue/2), VectorLength)\n",
+    "    vecBuf.append(valVec) # fill cpp managed memory\n",
     "\n",
     "    # Finish filling the vector\n",
     "    cs.finishCurrentPopulationVector(vecBuf)\n",
