Updated Synthea Python to work with latest pyTigerGraph

--- a/plugin/tigergraph/recomengine/examples/synthea/jupyter-demo/TG_demo.ipynb
+++ b/plugin/tigergraph/recomengine/examples/synthea/jupyter-demo/TG_demo.ipynb
@@ -53,9 +53,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hostName = \"localhost\"                            # TG server hostname\n",
-    "userName = \"dummy\"                                # TG user name\n",
-    "passWord = \"password\"                             # TG user password"
+    "hostName = \"localhost\"                              # TG server hostname\n",
+    "userName = \"tigergraph\"                             # TG user name\n",
+    "passWord = \"tigergraph\"                             # TG user password"
    ]
   },
   {
@@ -94,8 +94,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "localRepoLocation = Path(\"C:/Users/dummy\")\n",
-    "exampleLocation = Path(\"graphanalytics/plugin/tigergraph/examples/synthea\") # when running from github repo\n",
+    "localRepoLocation = Path(\"C:\\user\\dummy\")\n",
+    "exampleLocation = Path(\"graphanalytics/plugin/tigergraph/recomengine/staging/examples/synthea\") # when running from github repo\n",
     "queryFileLocation = localRepoLocation / exampleLocation / \"query\""
    ]
   },
@@ -227,7 +227,7 @@
     "with open(schemaFile) as fh:\n",
     "    qStrRaw = fh.read()\n",
     "    qStr = qStrRaw.replace('@graph', graphName)\n",
-    "    print(conn.gsql(qStr, options=[]))"
+    "    print(conn.gsql(qStr))"
    ]
   },
   {
@@ -253,8 +253,8 @@
     "    qStrRaw = qStrRaw.replace('@graph', graphName)\n",
     "    qStr    = qStrRaw.replace('$sys.data_root', str(serverDataLocation))\n",
     "    print(conn.gsql(qStr, options=[]))\n",
-    "    print(conn.gsql(f\"RUN LOADING JOB load_xgraph\", options=['-g', graphName]))\n",
-    "    print(conn.gsql(f\"DROP JOB load_xgraph\", options=['-g', graphName]))"
+    "    print(conn.gsql(f\"USE GRAPH {graphName}\\n RUN LOADING JOB load_xgraph\"))\n",
+    "    print(conn.gsql(f\"USE GRAPH {graphName}\\n DROP JOB load_xgraph\"))"
    ]
   },
   {
@@ -281,12 +281,12 @@
     "    print(\"installing base queries ...\")\n",
     "    qStrRaw = bfh.read()\n",
     "    qStr = qStrRaw.replace('@graph', graphName)\n",
-    "    print(conn.gsql(qStr, options=[]))\n",
+    "    print(conn.gsql(qStr))\n",
     "    \n",
     "    print(\"\\ninstalling client queries ...\")\n",
     "    qStrRaw = cfh.read()\n",
     "    qStr = qStrRaw.replace('@graph', graphName)\n",
-    "    print(conn.gsql(qStr, options=[]))"
+    "    print(conn.gsql(qStr))"
    ]
   },
   {
@@ -364,7 +364,7 @@
     "print('Running Query...')\n",
     "# pick a random patient out of 100\n",
     "targetPatients = conn.getVertices('patients', limit=100)\n",
-    "targetPatient = targetPatients[rand.randint(1,100)]\n",
+    "targetPatient = targetPatients[rand.randint(0,99)]\n",
     "\n",
     "# run similarity on the choosen patient\n",
     "tStart = time.perf_counter()\n",
@@ -391,7 +391,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
