Ported Log Similarity to dev

--- a/plugin/tigergraph/recomengine/examples/synthea/jupyter-demo/TG_demo.ipynb
+++ b/plugin/tigergraph/recomengine/examples/synthea/jupyter-demo/TG_demo.ipynb
@@ -246,13 +246,12 @@
    "source": [
     "print(\"\\n--------- Loading data into graph ----------\")\n",
     "loadFile = queryFileLocation / \"load_xgraph.gsql\"\n",
-    "print(str(serverDataLocation))\n",
     "\n",
     "with open(loadFile) as fh:\n",
     "    qStrRaw = fh.read()\n",
     "    qStrRaw = qStrRaw.replace('@graph', graphName)\n",
     "    qStr    = qStrRaw.replace('$sys.data_root', str(serverDataLocation))\n",
-    "    print(conn.gsql(qStr, options=[]))\n",
+    "    print(conn.gsql(qStr))\n",
     "    print(conn.gsql(f\"USE GRAPH {graphName}\\n RUN LOADING JOB load_xgraph\"))\n",
     "    print(conn.gsql(f\"USE GRAPH {graphName}\\n DROP JOB load_xgraph\"))"
    ]
