Fixed Notebook Path setup and other cleanup

--- a/plugin/tigergraph/recomengine/examples/log_similarity/jupyter-demo/log_similarity_TG_demo.ipynb
+++ b/plugin/tigergraph/recomengine/examples/log_similarity/jupyter-demo/log_similarity_TG_demo.ipynb
@@ -169,9 +169,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "localRepoLocation = Path(\"/proj/xsjhdstaff3/sachink/ghe\")\n",
-    "exampleLocation = Path(\"graphanalytics/plugin/tigergraph/recomengine/staging/examples/log_similarity\") # when running from github repo\n",
-    "queryFileLocation = localRepoLocation / exampleLocation / \"query\""
+    "notebookLocation = Path(os.getcwd() + \"/..\")\n",
+    "queryFileLocation = notebookLocation / \"query\""
    ]
   },
   {
@@ -189,37 +188,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "serverRepoLocation = PurePosixPath(\"/proj/xsjhdstaff3/sachink/ghe\")\n",
-    "serverDataLocation = serverRepoLocation / PurePosixPath(exampleLocation) / \"data\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "46d3dd9e",
-   "metadata": {},
-   "source": [
-    "#### Download the GloVe File  <a id=\"DownloadFiles\"></a>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "874a670d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if not os.path.isfile(\"/tmp/glove.6B.50d.txt\") :\n",
-    "    if not os.path.isfile(\"/tmp/glove.6B.50d.txt.tar\") :\n",
-    "        print(\"Dowloading GloVe Embedding File ...\")\n",
-    "        os.chdir(\"/tmp\")\n",
-    "        os.system(\"wget --no-check-certificate 'https://docs.google.com/uc?export=download&id=1ogyMmAu0fcZBdSwTQJuX6jHLzlTJnql0' -O glove.6B.50d.txt.tar\")\n",
-    "        print(\"Download Completed!\")\n",
-    "    print(\"Extracting GloVe Embedding File ...\")\n",
-    "    os.chdir(\"/tmp\")\n",
-    "    os.system(\"tar -xvzf glove.6B.50d.txt.tar\")\n",
-    "    print(\"Done!\")\n",
-    "else:\n",
-    "    print(\"GloVe Model File already present.\")"
+    "serverInstallLocation = PurePosixPath(\"/opt/xilinx/apps/graphanalytics/integration/Tigergraph-3.x/1.1/examples/log_similarity\")\n",
+    "serverDataLocation = serverInstallLocation / \"data\""
    ]
   },
   {
