--- a/plugin/tigergraph/recomengine/examples/synthea/jupyter-demo/TG_demo.ipynb
+++ b/plugin/tigergraph/recomengine/examples/synthea/jupyter-demo/TG_demo.ipynb
@@ -34,7 +34,8 @@
     "import time\n",
     "import random as rand\n",
     "from pathlib import Path, PurePosixPath\n",
-    "import pyTigerGraph as tg"
+    "import pyTigerGraph as tg\n",
+    "import os"
    ]
   },
   {
@@ -94,9 +95,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "localRepoLocation = Path(\"C:\\user\\dummy\")\n",
-    "exampleLocation = Path(\"graphanalytics/plugin/tigergraph/recomengine/staging/examples/synthea\") # when running from github repo\n",
-    "queryFileLocation = localRepoLocation / exampleLocation / \"query\""
+    "notebookLocation = Path(os.getcwd() + \"/..\")\n",
+    "queryFileLocation = notebookLocation / \"query\""
    ]
   },
   {
@@ -112,8 +112,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "serverRepoLocation = PurePosixPath(\"/home/dummy\")\n",
-    "serverDataLocation = serverRepoLocation / PurePosixPath(exampleLocation) / \"1000_patients/csv\""
+    "serverInstallLocation = PurePosixPath(\"/opt/xilinx/apps/graphanalytics/integration/Tigergraph-3.x/1.1/examples/synthea\")\n",
+    "serverDataLocation = serverInstallLocation / \"1000_patients/csv\""
    ]
   },
   {
