--- a/cosinesim/examples/python/jupyter/jupyter_demo.ipynb
+++ b/cosinesim/examples/python/jupyter/jupyter_demo.ipynb
@@ -94,7 +94,7 @@
    "source": [
     "opt = xcs.options()\n",
     "opt.vecLength = VectorLength\n",
-    "opt.numDevices = 2"
+    "opt.numDevices = 1"
    ]
   },
   {
@@ -197,7 +197,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -211,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
