MIS Jupyter Notebook fix

--- a/mis/examples/python/jupyter/misdemo_notebook.ipynb
+++ b/mis/examples/python/jupyter/misdemo_notebook.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xclbin_path = os.environ.get('XCLBIN_PATH')\n",
+    "xclbin_path = os.environ.get('XCLBIN_FILE')\n",
     "deviceNames = os.environ.get('DEV_NAME')\n",
     "in_dir = os.environ.get('DATA_DIR')"
    ]
